fix: visibility

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ body {
     transition: opacity 0.2s ease-in-out;
 }
 
+#internal__template {
+    display: none;
+}
+
 #internal__start-page {
     width: 100%;
     height: 100%;
